syntax = "proto3";

                 package playerFactionReputation;
service PlayerFactionReputationService {
 rpc createPlayerFactionReputation (PlayerFactionReputationCreateInput) returns (PlayerFactionReputation) {}
rpc playerFactionReputations (findManyParams) returns (stream PlayerFactionReputation) {}
rpc playerFactionReputation (PlayerFactionReputationWhereUniqueInput) returns (PlayerFactionReputation) {}
rpc updatePlayerFactionReputation (PlayerFactionReputationUpdateInput) returns (PlayerFactionReputation) {}
rpc deletePlayerFactionReputation (PlayerFactionReputationWhereUniqueInput) returns (PlayerFactionReputation) {} 
 }
message PlayerFactionReputationCreateInput {
int32 amount = 1;
string createdAt = 2;
string id = 3;
string updatedAt = 4;
};
message PlayerFactionReputation {
int32 amount = 1;
string createdAt = 2;
string id = 3;
string updatedAt = 4;
};
message PlayerFactionReputationWhereUniqueInput {
int32 amount = 1;
string createdAt = 2;
string id = 3;
string updatedAt = 4;
};
message PlayerFactionReputationUpdateInput {
int32 amount = 1;
string createdAt = 2;
string id = 3;
string updatedAt = 4;
};
message findManyParams {

};